tests/snapshots/bad_input__assignment_to_const.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: Assignment to const-qualified variable
path: assignment_to_const.c
span:
  file: 0
  start:
    file: 0
    line: 1
    column: 32
  end:
    file: 0
    line: 1
    column: 33
verbose: false
kind: Error
