tests/snapshots/bad_input__dereference_non_pointer.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: "Cannot dereference non-pointer type `Int`"
span:
  start: 1027
  end: 1028
verbose: false
is_warning: false
