tests/snapshots/bad_input__duplicate_variable_declaration.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: "Redeclaration of variable `x`"
span:
  start: 1030
  end: 1031
verbose: false
is_warning: false
