tests/snapshots/bad_input__static_assert_failed.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: "Unexpected token: )"
span:
  start: 1049
  end: 1050
verbose: false
is_warning: false
