tests/snapshots/bad_input__type_mismatch.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: "Unused variable `a`"
path: type_mismatch.c
span:
  file_id: 0
  start_line: 1
  start_column: 18
  end_line: 1
  end_column: 19
verbose: false
is_warning: true
