tests/snapshots/bad_input__undefined_label.snap
---
source: tests/bad_input.rs
expression: err.unwrap_err()
---
msg: "Undefined label `undefined_label`"
path: undefined_label.c
span:
  file: 0
  start:
    file: 0
    line: 1
    column: 19
  end:
    file: 0
    line: 1
    column: 34
verbose: false
kind: Error
